# Forum-Master-Thesis-.NET

./: .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  CLAUDE.md  Dockerfile  Makefile  README.md  compose.yaml
.claude/: settings.json
.github/workflows/: ci.yml  security.yml
backend/: Directory.Build.props  Directory.Packages.props  Forum.slnx
backend/tests/: .editorconfig
docs/architecture/: AB-CURRENT-STATE-AUDIT.md  AB-THESIS-GAP-ANALYSIS.md  AB-UNIFICATION-MASTER-PLAN.md  AB-UNIFICATION-PLAN-ARCHITECTURE-A.md  AB-UNIFICATION-PLAN-ARCHITECTURE-B.md  DOMAIN-MODEL-AND-DATABASE.md  FOUNDATION-AND-SHARED-ABSTRACTIONS.md  FRONTEND-DESIGN-BRIEF.md  IMPLEMENTATION-PLAN.md  OBSERVABILITY-CONTRACT.md  PHASE-11-SOCIAL-PROGRESS.md  (+6 more)
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  Dockerfile.dockerignore  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json
frontend/src-tauri/: .gitignore  Cargo.toml  README.md  build.rs  tauri.conf.json
frontend/src-tauri/capabilities/: settings.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs
frontend/src-tauri/ui/: index.html  settings.css  settings.js
k8s/: namespace.yaml  rbac.yaml
scripts/: bench-run.sh  build-images.sh  deploy.sh  dev-api.sh  dev-tunnels.sh  dev-web.sh  infra-down.sh  infra-up.sh  lib.sh  mkcert-tls.sh  monitoring-check.sh  monitoring-down.sh  monitoring-up.sh  preflight.sh  reset-db.sh  run-load-test.sh  scan-image.sh  seed-test-data.sh  setup-minikube.sh  teardown.sh
(+901 files in other folders)
