[package]
name = "forum-desktop"
version = "0.1.0"
description = "Tauri desktop shell for the forum-dotnet React SPA (thesis Architecture A)"
authors = ["Jakub Patkowski"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "forum_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2"
tauri = { version = "2", features = [] }
# Used from Rust only (external links -> system browser); the webview gets no opener IPC.
tauri-plugin-opener = "2"
